--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: test -z $(go fmt ./...) && echo $?
 
       - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+        run: go get honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: Run linting
         run: staticcheck ./...
