--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,8 @@ jobs:
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
+      - name: Set PATH for staticcheck
+        run: echo "::add-path::$GOPATH/bin"
+
       - name: Run linting
         run: staticcheck ./...
