--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: Run linting
-        run: $GOPATH/bin/staticcheck ./...
+        run: $(go env GOPATH)/bin/staticcheck ./...
